ON-16012: mitigate low mem conditions by using vmalloc in oof_local_port_alloc()
ON-16149: provide onload-examples package
ON-16277: allow physical addressing mode selection in eflatency
ON-16329: allow eflatency to parse payload length list as input
ON-16330: handle sending ICMP and ICMPv6 over CTPIO
ON-16400: use rdtscp for more accurate benchmarking
ON-16451: trigger update-initramfs in module-assistant or make-kpkg
ON-16486: update eflatency to show impact of reading data
ON-16659: address X3 scheduling starvation in tcp_helper_wakeup
ON-16674: use initramfs.conf to ensure correct sfc module used from boot
ON-16677: enable LTO in standalone builds or pass through in package builds
ON-16755: add efsend ability for unlimited sends and SIGINT for ending test
ON-16913: fix option help text in exchange example app
ON-16993: Handle partial filter install with EF_NO_FAIL=1
#283: af_xdp scheduling improvements


onload-9.0.2.140
----------------

Update sfc net driver to v6.1.0.1009

Add support for:
 - Red Hat Enterprise Linux 10.0
 - Red Hat Enterprise Linux 9.6
 - kernel.org Linux kernels up to 6.14

Changes:

ON-7548: use 2MB huge pages when 1GB is set as default
ON-10531: make sfcaffinity_config script pin the ptp interrupt
ON-10782: add NUMA support to sfcaffinity_config script
ON-16079: return correct CMSG len for TCP recvmsg
ON-16168: add ef_receive_poll() API call for polling for rx only
ON-16191: do not convert TCP zero checksums to all ones
ON-16195: add SDCI support
ON-16454: fix file reference counting on fdtable update
ON-16486: add eflatency options to copy and peek at received data
#276: fix onload_build --kernelver=<KVER> specification


onload-9.0.1.86
---------------

Update sfc net driver to v6.0.2.1000

Add support for:
 - Red Hat Enterprise Linux 9.5
 - kernel.org Linux kernels up to 6.12

Changes:

ON-15106: correctly use SW full match IP filters on X3 onload
ON-15830: remove support for out-of-tree aux bus
ON-15852: use unbound work queue