@@ -116,6 +116,10 @@
 #define efhw_nic_vi_free(nic, instance, n_vis) \
 	((nic)->efhw_func->vi_free((nic), (instance), (n_vis)))
 
+#define efhw_nic_supports_shared_evq(nic) \
+	((nic)->efhw_func->supports_shared_evq ? \
+	 (nic)->efhw_func->supports_shared_evq((nic)) : true)
+
 /*-------------- DMA support  ------------ */
 #define efhw_nic_dmaq_tx_q_init(nic, params) \
 	((nic)->efhw_func->dmaq_tx_q_init((nic), (params)))
